@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.276 2008/07/16 19:44:36 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.277 2008/07/19 16:47:38 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -3864,6 +3864,11 @@ plot_vectors(struct curve_points *plot)
 
 	points[1].x = plot->points[i].xhigh;
 	points[1].y = plot->points[i].yhigh;
+
+	/* variable color read from extra data column. Most styles */
+	/* have this stored in yhigh, but VECTOR stuffed it into z */
+	points[0].yhigh = points[0].z;
+	check_for_variable_color(plot, &points[0]);
 
 	if (inrange(points[1].x, X_AXIS.min, X_AXIS.max)
 	    && inrange(points[1].y, Y_AXIS.min, Y_AXIS.max)) {
