@@ -1,7 +1,12 @@
+2008-07-19  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (plot_vectors) src/plot2d.c (get_data):
+	Allow 2D vector plots to take color from an extra data column.
+
 2008-07-16  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Move palette
-	initialize earlier in the sequence, so that no objects or axes are
+	initialization earlier in the sequence, so that no objects or axes are
 	drawn before the palette is defined.
 	Bug #2019453
 
